DB Context y Connection String

--- a/P2_2019AM606_2019LD601/appsettings.json
+++ b/P2_2019AM606_2019LD601/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "dbConexion": "Data Source=LAPTOP-ICGDQERP\\SQLEXPRESS01; Initial Catalog=CASOSCOVID; User id=sa; Password=aeld2001; Connect Timeout=120;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
